--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                 </a>
                 <a class="story" href="project/iaido.html">
                     <div class="tagoverview">Overview</div>
-                    <img class="storyimage" src="img2/iaido.png"/>
+                    <img class="storyimage" src="img2/Iaido.png"/>
                     <div class="storytitle">Iaido</div>
                     <div class="storyhighlights">
                         <div class="highlight datenew">2015</div>
