--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 			Throughout the years i have worked on many different disciplines including Combat design, level design, VFX work, tool development, engine programming, sound design, lighting, shader work and more.
 			<br/><br/>
 			This site is a collection of some of the projects i have worked on - both professional and personal.
-			If you only check out one thing on this site though, i suggest taking a look at the <a href="project/seth_spotlight.html">Seth Character Spotlight</a> or my <a href="resume.pdf" target="_blank">resume.</a>
+			If you only check out one thing on this site though, i suggest taking a look at the <a href="project/seth_spotlight.html" style="text-decoration: underline;">Seth Character Spotlight</a> or my <a href="resume.pdf" target="_blank" style="text-decoration: underline;">resume.</a>
 			<br/><br/><br/>
 			</div>
             </div>
