--- a/project/iaido.html
+++ b/project/iaido.html
@@ -24,7 +24,7 @@
             <div class = "projectSubheadingVideo"> </div>
                 <div class = "centerbody">
                 <div class = "projectvideo">
-                <img width=100% src="../img2/iaido.png" />
+                <img width=100% src="../img2/Iaido.png" />
                      </div>
                 </div>
                 <div class = "videoBottom"></div>
