--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                         <div class="highlight datenew">2018</div>
                         <div class="highlight design">Solo Project</div>
                     </div>
-                    <div class="storydesc">A 2D Top-Down fighting game prototype developed in GameMaker with unconventional graphics.</div>
+                    <div class="storydesc">A 2D Top-Down fighting game prototype developed in GameMaker with a novel artstyle.</div>
                 </a>
                 <a class="story" href="project/iaido.html">
                     <div class="tagoverview">Overview</div>
@@ -287,36 +287,17 @@
                     </div>
                     <div class="storydesc">A multiplayer Arena "shooter" about air-dashing samurais.</div>
                 </a>
-                <a class="story" href="project/spellslingers.html">
-                    <div class="tagoverview">Overview</div>
-                    <img class="storyimage" src="img2/spellslingers1.png"/>
-                    <div class="storytitle">Spellslingers</div>
-                    <div class="storyhighlights">
-                        <div class="highlight datenew">2013</div>
-                        <div class="highlight implementation">Student Project</div>
-                    </div>
-                    <div class="storydesc">Ring-out based PVP Twin-Stick shooter</div>
-                </a>
                 <a class="story" href="project/wc3.html">
                     <div class="tagoverview">Overview</div>
                     <img class="storyimage" src="img2/wc3.jpg"/>
-                    <div class="storytitle">Warcraft 3 Mods</div>
+                    <div class="storytitle">Mods & Student Projects</div>
                     <div class="storyhighlights">
-                        <div class="highlight datenew">2006-2013</div>
+                        <div class="highlight datenew">2006-2015</div>
                         <div class="highlight implementation">Modding</div>
                     </div>
-                    <div class="storydesc">Various different Warcraft Mods made throughout the years.</div>
+                    <div class="storydesc">MOBA's, Mods and More weird hobby projects.</div>
                 </a>
                 
-                <a class="story" href="project/more.html">
-                    <div class="tagoverview">Overview</div>
-                    <img class="storyimage" src="img/folder.png"/>
-                    <div class="storytitle">And More!</div>
-                    <div class="storyhighlights">
-                        <div class="highlight datenew">2008-Present</div>
-                    </div>
-                    <div class="storydesc">There's too much stuff to show it all.</div>
-                </a>
             </div>
         </div>
         <div class = "contact" id = "contact">
