--- a/project/wc3.html
+++ b/project/wc3.html
@@ -19,8 +19,8 @@
     <div class="projectmain">
         <div class = "projectbody">
             <div class = sectionBarAbout>
-            <div class = "projectHeading">Warcraft 3 Maps</div>
-                <div class = "projectSubtitle">Many, many Warcraft maps</div>
+            <div class = "projectHeading">Mods and other hobby projects</div>
+                <div class = "projectSubtitle">and many, many Warcraft maps</div>
             <div class = "projectSubheadingVideo"> </div>
             <div class = "centerbody">
                 <div class="projectvideo">
@@ -30,7 +30,7 @@
                 <br/>
                 </div>
                     <div class="storyhighlights">
-                        <div class="highlight dh"><span class = "date">2006-2012</span></div>
+                        <div class="highlight dh"><span class = "date">2006-2015</span></div>
                         <div class="highlight design dh">Design</div>
                         <div class="highlight collaboration dh">Solo</div>
                     </div>
@@ -40,11 +40,13 @@
             <br/><br/>
             
             Growing up, i spent plenty of nights in a living room crowded with sleeping bags and PC's with my childhood friends, playing Warcraft 3 mods into the morning.
-			I quickly got interested in how to make some of my own, and from there how to make stand alone games.
+			So I quickly got interested in how to make some of my own, which kicked off my interest in gamedev.
             <br /><br />
-			At this point i am not quite sure how many different Warcraft maps. Somewhere between 15 and 20 i would assume. Some of them did garner small communities on Blizzards servers, although i think many of them are lost to time, so you'll just have to take my word for it.
-            
-            <br/>
+			several MOBA's, weird experimental concepts, and at one point trying to force the Warcraft engine to work as a first person shooter.
+			At this point i am not quite sure how many different Warcraft maps. Somewhere between 15 and 20. Some of them did gather a small following on Battle.net although i think many of them are lost to time, so you'll just have to take my word for it.
+            <br/><br/>
+			After getting started with Warcraft maps, i looked into making my own standalone games. My first projects being simple 2D platformers or Shoot-em-up's made in Game Maker.
+			I've since then moved on from Game Maker, although it does hold a special place in my heart.
 
         </div>
     </div>
