--- a/index.html
+++ b/index.html
@@ -176,6 +176,15 @@
                     </div>
                     <div class="storydesc">An outline of my involvement in RushRev's character production pipeline.</div>
                 </a>
+				<a class="story" href="project/leveldesign.html">
+                    <div class="tagshowcase">Showcase</div>
+                    <img class="storyimage" src="img2/leveldesign3.png"/>
+                    <div class="storytitle">Singleplayer Level Design</div>
+                    <div class="storyhighlights">
+                        <div class="highlight design">Design</div>
+                    </div>
+                    <div class="storydesc">Designing a singleplayer platforming experience to teach players Rushrev.</div>
+                </a>
                 <a class="story" href="project/visuals.html">
                     <div class="tagstory">Story</div>
                     <img class="storyimage" src="img2/combatlabsnew.png"/>
@@ -210,8 +219,8 @@
                 </a>
                 <a class="story" href="project/singleplayer.html">
                     <div class="tagstory">Story</div>
-                    <img class="storyimage" src="img2/tutorial.png"/>
-                    <div class="storytitle">Single Player Level Design and tooling</div>
+                    <img class="storyimage" src="img2/leveltooling.png"/>
+                    <div class="storytitle">Tooling</div>
                     <div class="storyhighlights">
                         <div class="highlight implementation">Level Design</div>
 						<div class="highlight implementation">Programming</div>
